# helloworld

./: .pre-commit-config.yaml  OWNERS  README.md  pyproject.toml
src/myproject/conf/: global_conf.py  router_conf.py
src/myproject/interface/grpc/: __init__.py  helloworld.py
src/myproject/interface/rest/v1/: helloworld.py
src/myproject/model/helloworld/: request.py  response.py
src/myproject/service/: helloworld.py
