[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myproject"]

[project]
name = "myproject"
version = "0.0.1"
dependencies = [
    "aurorastack-core",
    "aurorastack-api"
]
requires-python = ">=3.8"
authors = [
    {name = "Choonho Son", email = "choonho.son@gmail.com"}
]
maintainers = [
    {name = "Choonho Son", email = "choonho.son@gmail.com"}
]
description = "HelloWorld gRPC server with aurorastack"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aurorastack", "helloworld"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://aurorastack.io"
